<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context="com.example.android.donationsforcharityscorekeeper.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TeamA"
                    android:textColor="@color/TeamA"
                    android:textSize="@dimen/team_text_size" />

                <TextView
                    style="@style/money_raised_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/money_raised"
                    android:textColor="@color/score_title_color" />

                <TextView
                    android:id="@+id/team_a_money_score"
                    style="@style/money_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_value_money"
                    android:textColor="@color/TeamA"
                    android:textSize="@dimen/money_score" />

                <TextView
                    style="@style/products_sold_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/products_sold"
                    android:textColor="@color/score_title_color" />

                <TextView
                    android:id="@+id/team_a_products_score"
                    style="@style/products_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_value_products"
                    android:textColor="@color/TeamA"
                    android:textSize="@dimen/product_score" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamA"
                    android:onClick="addOneForTeamA"
                    android:text="@string/product1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamA"
                    android:onClick="addTwoForTeamAProduct2"
                    android:text="@string/product2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamA"
                    android:onClick="addTwoForTeamAProduct3"
                    android:text="@string/product3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamA"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/product4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamA"
                    android:onClick="addFiveForTeamA"
                    android:text="@string/product5" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TeamB"
                    android:textColor="@color/TeamB"
                    android:textSize="@dimen/team_text_size" />

                <TextView
                    style="@style/money_raised_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/money_raised"
                    android:textColor="@color/score_title_color" />

                <TextView
                    android:id="@+id/team_b_money_score"
                    style="@style/money_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_value_money"
                    android:textColor="@color/TeamB"
                    android:textSize="@dimen/money_score" />

                <TextView
                    style="@style/products_sold_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/products_sold"
                    android:textColor="@color/score_title_color" />

                <TextView
                    android:id="@+id/team_b_products_score"
                    style="@style/products_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_value_products"
                    android:textColor="@color/TeamB"
                    android:textSize="@dimen/product_score" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamB"
                    android:onClick="addOneForTeamB"
                    android:text="@string/product1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamB"
                    android:onClick="addTwoForTeamBProduct2"
                    android:text="@string/product2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamB"
                    android:onClick="addTwoForTeamBProduct3"
                    android:text="@string/product3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamB"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/product4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/buttons_TeamB"
                    android:onClick="addFiveForTeamB"
                    android:text="@string/product5" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/win_message_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/money_message_margin_top"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="@color/color_win"
            android:textSize="@dimen/message_text_size" />

        <TextView
            android:id="@+id/win_message_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/products_message_margin_top"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="@color/color_win"
            android:textSize="@dimen/message_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/margin_bottom3"
            android:layout_marginLeft="@dimen/reset_button_margin_left"
            android:layout_marginRight="@dimen/reset_button_margin_right"
            android:onClick="resetScore"
            android:text="@string/reset_button" />

        <Button
            android:id="@+id/show_win_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/margin_bottom3"
            android:layout_marginRight="@dimen/score_status_margin_right"
            android:onClick="showStatus"
            android:text="@string/result" />

    </RelativeLayout>
</ScrollView>